# pupil-cloud-client-python

./: .env.example  .gitignore  .travis.yml  README.md  backup_pyproject.toml  example.py  examples-requirements.txt  git_push.sh  pyproject.toml  setup.py  tox.ini
docs/: AcceptInvitationResourcePostResponse.md  AoiApi.md  AoiGetResponse.md  AoiPatchRequest.md  AoiPatchResponse.md  AoiPostRequest.md  AoiPostResponse.md  AoisDeleteRequest.md  AoisGetResponse.md  AoisResponse.md  ApriltagDetectionsGetResponse.md  ApriltagResult.md  ApriltagsAtTimestampGetResponse.md  AuthApi.md  Blinks.md  BlinksTimeline.md  CameraPose.md  CannySSOToken.md  CannySsoTokenGetResponse.md  CloudClientApi.md  Color.md  CreateRecordingEvent.md  DistortedSurfaceLocationPostResponse.md  EnrichmentDownloadSpec.md  FaceDetection.md  FaceDetectionTimeline.md  Filter.md  FilterGetResponse.md  FilterPatchRequest.md  FilterPatchResponse.md  FilterPostRequest.md  FiltersApi.md  FiltersDeleteRequest.md  FiltersGetResponse.md  FiltersPostResponse.md  FixationDatapoint.md  Fixations.md  FixationsTimeline.md  GazeCircle.md  GazeDatapoint.md  (+182 more)
examples/: AOI_timeline.py  Gaze_offset.py  Sem_Obj_detection.py  aoi_tutorial.py
pupilcloud/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_accept_invitation_resource_post_response.py  test_aoi_api.py  test_aoi_get_response.py  test_aoi_patch_request.py  test_aoi_patch_response.py  test_aoi_post_request.py  test_aoi_post_response.py  test_aois_delete_request.py  test_aois_get_response.py  test_aois_response.py  test_auth_api.py  (+208 more)
(+210 files in other folders)
