[project]
name = "pupilcloud"
version = "0.1.0"
description = "Pupil Cloud"
readme = "README.md"
repository = "https://github.com/pupil-labs/pupil-cloud-client-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Pupil Cloud"]
include = ["pupilcloud/py.typed"]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.6.1",
    "urllib3>= 1.25.3, < 2.1.0",
    "python-dateutil>=2.5.3",
    "aiohttp>= 3.0.0",
    "aiohttp-retry>= 2.8.3",
    "pydantic >=2",
    "typing-extensions>=4.7.1",
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8 >=4.0.0",
    "types-python-dateutil>=2.8.19.14",
    "mypy >= 1.4.1",
    "setuptools >= 21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
